# bcl2fastr

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  setup.py
docs/: background_info.md
pysrc/bcl2fastr/: make_test_cbcls.py
src/: cbcl_decoder.rs  cbcl_header_decoder.rs  extract_reads.rs  filter_decoder.rs  lane_collect_reads.rs  locations.rs  locs_decoder.rs  main.rs  novaseq_run.rs  parser.rs  run_info_parser.rs  sample_data.rs  structs.rs  tile_decoder.rs
src/common/: base_decoder.rs  cbcl_header_decoder.rs  extract_reads.rs  filter_decoder.rs  hamming_set.rs  index_count.rs  lib.rs  locs_decoder.rs  novaseq_run.rs  run_info_parser.rs  sample_data.rs  write_fastq.rs
src/test_data/: cbcl_inspect.py  create_small_cbclheader.py  create_small_filter.py  create_small_lane.py  create_small_locs.py  make_test_cbcls.py  test_filter.filter  test_locs.locs  test_runparams.xml
src/test_data/190414_A00111_0296_AHJCWWDSXX/Data/Intensities/BaseCalls/L001/: s_1_1101.filter  s_1_1102.filter  s_1_1103.filter
src/test_data/test_lane/C116.1/: L001_1.cbcl
test_data/: L001_1_cbcl_header.cbcl  RunInfo.xml  bad_RunInfo.xml  bad_RunInfo_no_tiles.xml  cbcl_inspect.py  create_small_cbclheader.py  create_small_filter.py  create_small_lane.py  create_small_locs.py  hamming_distance_1_test.txt  hamming_distance_1_test2.txt  hamming_distance_2_test.txt  make_test_cbcls.py  s_1_1101.filter  test_cbcl_header.cbcl  test_runparams.xml  weird_RunInfo.xml
test_data/190414_A00111_0296_AHJCWWDSXX/: 190414_A00111_0296_AHJCWWDSXX.csv  RunInfo.xml  SampleSheet.csv
test_data/190414_A00111_0296_AHJCWWDSXX/Data/Intensities/: s.locs
test_data/190414_A00111_0296_AHJCWWDSXX/Data/Intensities/BaseCalls/L001/: s_1_1101.filter  s_1_1102.filter  s_1_1103.filter
test_data/190414_A00111_0296_AHJCWWDSXX/Data/Intensities/BaseCalls/L001/C1.1/: L001_1.cbcl
test_data/190414_A00111_0296_AHJCWWDSXX/Data/Intensities/BaseCalls/L001/C10.1/: L001_1.cbcl
test_data/sample_data/: bad_file.csv  double_index_samples.csv  missing_index.csv  missing_project.csv  no_conflict_w_index2.csv  no_index.csv  no_sample_name.csv  sample_collision.csv  test_samplesheet_no_conflict_w_index2_no_splitlanes.csv  test_samplesheet_w_conflict_in_seperate_lanes_w_index2.csv  test_samplesheet_w_conflict_no_index2_w_splitlanes.csv  test_samplesheet_w_conflict_w_index2_w_splitlanes.csv  w_conflict_in_separate_lanes_w_index2.csv  w_conflict_no_index2_w_lanes.csv  w_conflict_w_index2_w_lanes.csv
test_data/test_output/: barcode_L001_report.txt  index_counts.txt  index_counts_filtered.txt
tests/: integration.rs
(+46 files in other folders)
