[package]
name = "bcl2fastr"
version = "0.1.0"
authors = [
  "phoenixAja <phoenix@phoenixlogan.net>", 
  "James Webber <james.webber@czbiohub.org>",
]
edition = "2018"
default-run = "bcl2fastr"

[[bin]]
name = "bcl2fastr"
path = "src/bin/demux.rs"

[[bin]]
name = "bcl2index"
path = "src/bin/index.rs"

[[bin]]
name = "filter_index"
path = "src/bin/filter_index.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
serde = { "version" = "1.0", "features" = ["derive"] }
serde-xml-rs = "0.3.1"
byteorder = "1.3.2"
flate2 = "1.0"
ndarray = { "version" = "0.13.0", "features" = ["rayon"] }
clap = "2.33"
counter = "0.4.3"
rayon = "1.2"
itertools = "0.8.0"
csv = "1.1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
