[package]
name = "bcl2fastr"
version = "0.1.0"
authors = [
  "phoenixAja <phoenix@phoenixlogan.net>", 
  "James Webber <james.webber@czbiohub.org>",
]
edition = "2018"
default-run = "bcl2fastr"

[[bin]]
name = "bcl2fastr"
path = "src/bin/demux.rs"

[[bin]]
name = "bcl2index"
path = "src/bin/index.rs"

[[bin]]
name = "filter_index"
path = "src/bin/filter_index.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
byteorder = "1.3.2"
clap = "2.33"
counter = "0.4.3"
csv = "1.1"
flate2 = "1.0"
log = "0.4"
itertools = "0.8"
ndarray = { "version" = "0.13", "features" = ["rayon"] }
rayon = "1.2"
serde = { "version" = "1.0", "features" = ["derive"] }
serde-xml-rs = "0.3.1"
stderrlog = "0.4"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
